Add build scripts

--- a/src/FSharp.Data.WsdlProvider.DesignTime/FSharp.Data.WsdlProvider.DesignTime.fsproj
+++ b/src/FSharp.Data.WsdlProvider.DesignTime/FSharp.Data.WsdlProvider.DesignTime.fsproj
@@ -4,19 +4,18 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>netstandard2.0;netcoreapp3.1;net45</TargetFrameworks>
-    <!--<Optimize>true</Optimize>-->
+    <Optimize Condition="'$(Configuration)' == 'Release'">true</Optimize>
     <Tailcalls>true</Tailcalls>
     <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="Debug.fsx" />
-    <Compile Include="..\..\paket-files\thinkbeforecoding\FSharp.TypeProviders.SDK\src\ProvidedTypes.fsi">
+    <Compile Include="..\..\paket-files\fsprojects\FSharp.TypeProviders.SDK\src\ProvidedTypes.fsi">
       <Paket>True</Paket>
       <Link>paket-files/ProvidedTypes.fsi</Link>
     </Compile>
-    <Compile Include="..\..\paket-files\thinkbeforecoding\FSharp.TypeProviders.SDK\src\ProvidedTypes.fs">
+    <Compile Include="..\..\paket-files\fsprojects\FSharp.TypeProviders.SDK\src\ProvidedTypes.fs">
       <Paket>True</Paket>
       <Link>paket-files/ProvidedTypes.fs</Link>
     </Compile>
