--- a/tests/FSharp.Data.WsdlProvider.Tests/FSharp.Data.WsdlProvider.Tests.fsproj
+++ b/tests/FSharp.Data.WsdlProvider.Tests/FSharp.Data.WsdlProvider.Tests.fsproj
@@ -6,6 +6,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="Eutax.wsdl" />
     <None Include="Translator.wsdl" />
     <None Include="Weather.wsdl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
