--- a/tests/FSharp.Data.WsdlProvider.Tests/FSharp.Data.WsdlProvider.Tests.fsproj
+++ b/tests/FSharp.Data.WsdlProvider.Tests/FSharp.Data.WsdlProvider.Tests.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\netfx.props" />
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net48</TargetFrameworks>
+    <TargetFrameworks>net6.0;net48</TargetFrameworks>
     <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
@@ -32,6 +32,7 @@
     <None Include="Weather.wsdl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="DirectClickService.wsdl" />
     <None Include="app.config" />
     <Compile Include="FSharp.Data.WsdlProvider.Tests.fs" />
     <Compile Include="NillableTest.fs" />
